<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

	<!--  第一个Tab对应的布局  -->
    <LinearLayout android:id="@+id/id_layout_tab_basic" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:orientation="vertical" >
		<LinearLayout android:layout_width="fill_parent" android:layout_height="20dip" android:orientation="vertical" ></LinearLayout>
		<Button android:id="@+id/id_btn_mobcam_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_text_mobcam_name" />
		<EditText android:textSize="15.0sp" android:id="@+id/id_edit_mobcam_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="" android:singleLine="true" android:maxLength="254" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_text_mobcam_password" />
		<EditText android:textSize="15.0sp" android:id="@+id/id_edit_mobcam_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="" android:singleLine="true" android:maxLength="254" />
    	
    	<LinearLayout android:layout_width="fill_parent" android:layout_height="10dip" android:orientation="vertical" ></LinearLayout>
    	<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_cap_method" />
		<Spinner android:id="@+id/id_spinner_cap_method" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
		
        <LinearLayout android:layout_width="fill_parent" android:layout_height="10dip" android:orientation="vertical" ></LinearLayout>
    	<CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_checkbox_auto_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_checkbox_auto_start" />
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="10dip" android:orientation="vertical" ></LinearLayout>
    	<CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_checkbox_hide_ui" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_checkbox_hide_ui" />
        
    </LinearLayout>


	<!--  第二个Tab对应的布局  -->
    <LinearLayout android:id="@+id/id_layout_tab_phone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:orientation="vertical" >
		<LinearLayout android:layout_width="fill_parent" android:layout_height="20dip" android:orientation="vertical" ></LinearLayout>
    	<CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_checkbox_enable_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_checkbox_enable_email" />
        
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_text_email_address" />
		<EditText android:textSize="15.0sp" android:id="@+id/id_edit_email_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/ui_hint_email_address" android:singleLine="true" />
		
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_text_email_tips" />
		
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="30dip" android:orientation="vertical" ></LinearLayout>
		
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_text_sms_phone_num" />
		<EditText android:textSize="15.0sp" android:id="@+id/id_edit_sms_phone_num" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/ui_hint_sms_phone_num" android:singleLine="false" />
    </LinearLayout>


</FrameLayout>
